--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -15,7 +15,10 @@ Grey dark 2: #777
 Grey dark 3: #999
 
 */
-
+:root{
+    --bar-color:#e8f1fa; 
+    --button-color:#4874df;
+}
 
 *{
     padding: 0;
